--- a/Lt18iSpecialSettings/AndroidManifest.xml
+++ b/Lt18iSpecialSettings/AndroidManifest.xml
@@ -71,13 +71,11 @@
     <uses-permission android:name="android.permission.STATUS_BAR" />
     <uses-permission android:name="android.permission.MANAGE_USB" />
     <uses-permission android:name="android.permission.SET_POINTER_SPEED" />
-    <application android:label="Lt18i Settings"
-                 android:theme="@miui:style/Theme.Light">
-        <activity android:name="Lt18iSpecialSettings"
-                  android:theme="@miui:style/Theme.Light">
+    <application android:label="@string/lt18i_settings" android:theme="@miui:style/Theme.Light">
+        <activity android:name="Lt18iSpecialSettings" android:theme="@miui:style/Theme.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <action android:name="com.android.setttings.device_specific" />
+                <action android:name="com.android.settings.MANUFACTURER_APPLICATION_SETTING" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
